--- a/style.css/style.css
+++ b/style.css/style.css
@@ -3,8 +3,7 @@
     padding: 0%;
     font-family: roboto, sans-serif;
     box-sizing: border-box;
-    text-decoration: none;
-    color: rgb(72, 77, 82);
+   
 }
 .contenedor {
     background-image: url(https://i.pinimg.com/236x/88/7a/6d/887a6d9c729450cca1d880997cbbc319.jpg);
@@ -229,13 +228,13 @@ aside{
     }
     @media (min-width:480px){
         .contenedorcomprar{
-            grid-template-columns: 1fr auto;
+            grid-template-columns: 1fr;
             grid-template-rows: auto auto auto 1fr;
             grid-template-areas: 
-            "div div"
-            "section section"
-            "aside aside"
-            "footer footer";
+            "div"
+            "section"
+            "aside"
+            "footer";
         }
     }
     @media (min-width:768px){
